quakeforge (0.7.1-1) frozen unstable; urgency=low

  * version 0.7.1 :)

 -- Bill Currie <bill@taniwha.org>  Fri, 18 Jan 2013 16:52:58 +0900

quakeforge (0.6.0~git20110804-0) frozen unstable; urgency=low

  * Small debian bugfixes and GIT snapshot

 -- sergio <mailbox@sergio.spb.ru>  Thu, 04 Aug 2011 03:24:32 +0400

quakeforge (0.6.0~git20101223-1) frozen unstable; urgency=low

  * The "No, really" release.
  * Cleaned up lintian errors.

 -- Jeff Teunissen <deek@d2dc.net>  Fri, 24 Dec 2010 16:49:21 -0500

quakeforge (0.6.0~git20101223-0) frozen unstable; urgency=low

  * Getting ready for 0.6.0 release.

 -- Jeff Teunissen <deek@d2dc.net>  Thu, 24 Dec 2010 19:39:37 -0400

quakeforge (0.5.5-0cvs20040727) frozen unstable; urgency=low

  * CVS snapshot.

 -- Jeff Teunissen <deek@d2dc.net>  Tue, 27 Apr 2004 19:39:37 -0400

quakeforge (0.5.4-2) frozen unstable; urgency=high

  * compile against libvorbis0a instead of libvorbis0 (oops)

 -- Bill Currie <bill@taniwha.org>  Mon, 21 Jul 2003 23:09:00 -0600

quakeforge (0.5.4-1) frozen unstable; urgency=high

  * New release. fixes exploitable buffer overflow in qw-server
  * add previous changlog entry :P

 -- Bill Currie <bill@taniwha.org>  Thu, 17 Jul 2003 16:30:40 -0600

quakeforge (0.5.3-1) frozen unstable; urgency=low

  * New Release.
  * add the menu file as the problems for it in 0.5.2 have been fixed

 -- Bill Currie <bill@taniwha.org>  Wed, 09 Jul 2003 15:43:00 -0600

quakeforge (0.5.2-1.1) frozen unstable; urgency=low

  * The "It is a silly place" release.
  * Fix /etc/quakeforge.conf to load the default plugin, like all the work on
    the plugins made everyone think it would work. :)

 -- Jeff Teunissen <deek@d2dc.net>  Thu, 10 Oct 2002 00:54:23 -0400

quakeforge (0.5.2-1) frozen unstable; urgency=low

  * New release.
  * This package does not contain the menu file, because it would
    seriously screw up future upgrades. This will be fixed in 0.5.3.
    If you want menus, you'll have to download them from