@@ -1,12 +1,18 @@
 etc/quakeforge.conf
 usr/lib/libQFcd.so.*
 usr/lib/libQFconsole.so.*
+usr/lib/libQFecs.so.*
 usr/lib/libQFgib.so.*
+usr/lib/libQFgib_client.so.*
+usr/lib/libQFgui.so.*
 usr/lib/libQFimage.so.*
-usr/lib/libQFjs.so.*
+usr/lib/libQFinput.so.*
 usr/lib/libQFmodels.so.*
 usr/lib/libQFruamoko.so.*
+usr/lib/libQFruamoko_client.so.*
+usr/lib/libQFscene.so.*
 usr/lib/libQFsound.so.*
+usr/lib/libQFui.so.*
 usr/lib/libQFutil.so.*
 usr/lib/quakeforge/plugins/cd_file.so*
 usr/lib/quakeforge/plugins/cd_linux.so*
