@@ -2,22 +2,39 @@ usr/lib/libQFcd.*a
 usr/lib/libQFcd.so
 usr/lib/libQFconsole.*a
 usr/lib/libQFconsole.so
+usr/lib/libQFecs.*a
+usr/lib/libQFecs.so
 usr/lib/libQFgib.a
 usr/lib/libQFgib.so
+usr/lib/libQFgib_client.a
+usr/lib/libQFgib_client.so
+usr/lib/libQFgui.a
+usr/lib/libQFgui.so
 usr/lib/libQFimage.*a
 usr/lib/libQFimage.so
-usr/lib/libQFjs.*a
-usr/lib/libQFjs.so
 usr/lib/libQFmodels.*a
 usr/lib/libQFmodels.so
 usr/lib/libQFruamoko.*a
 usr/lib/libQFruamoko.so
+usr/lib/libQFruamoko_client.a
+usr/lib/libQFruamoko_client.so
+usr/lib/libQFscene.*a
+usr/lib/libQFscene.so
 usr/lib/libQFsound.*a
 usr/lib/libQFsound.so
+usr/lib/libQFui.*a
+usr/lib/libQFui.so
 usr/lib/libQFutil.*a
 usr/lib/libQFutil.so
 usr/lib/pkgconfig/quakeforge.pc
 usr/include/QF/GL/*.h
+usr/include/QF/GLSL/*.h
+usr/include/QF/Vulkan/*.h
+usr/include/QF/input/*.h
 usr/include/QF/math/*.h
 usr/include/QF/plugin/*.h
+usr/include/QF/progs/*.h*
+usr/include/QF/scene/*.h
+usr/include/QF/simd/*.h
+usr/include/QF/ui/*.h
 usr/include/QF/*.h
