@@ -1,1 +1,1 @@
-usr/lib/quakeforge/plugins/snd_render_jack.so*
+usr/lib/quakeforge/plugins/snd_output_jack.so*
