@@ -1,1 +1,0 @@
-usr/lib/quakeforge/plugins/snd_output_oss.so*
