@@ -1,6 +1,0 @@
-#!/bin/sh -e
-
-update-alternatives --install /usr/lib/quakeforge/plugins/snd_output_default.so quakeforge-audio-default /usr/lib/quakeforge/plugins/snd_output_oss.so 90
-
-#DEBHELPER#
-exit 0
