@@ -1,1 +1,0 @@
-usr/lib/quakeforge/plugins/vid_render_sw32.so*
