@@ -1,0 +1,1 @@
+usr/lib/quakeforge/plugins/vid_render_vulkan.so*
